# pylogtailer

./: .gitchangelog.rc  .pep8speaks.yml  .pre-commit-config.yaml  CHANGELOG.rst  README.rst  REUSE.toml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  containers.yml  diagrams.yml  release.yml  wheels.yml
src/logwatcher/: __init__.py  logwatcher.py
tests/: test_consumer.py  test_logwatcher.py
