[metadata]
name = logwatcher
description = Real-time log file watcher supporting log rotation
url = https://github.com/sarnold/pylogtailer
author = Stephen Arnold
author_email = stephen.arnold42@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license_expression = MIT
license_files = LICENSE
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Environment :: Console
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

project_urls =
    Homepage = https://github.com/sarnold/logwatcher
    Repository = https://github.com/sarnold/logwatcher.git
    Issues = https://github.com/sarnold/logwatcher/issues
    Changelog = https://github.com/sarnold/logwatcher/blob/main/CHANGELOG.rst

keywords =
    log
    tail
    watch

[options]
python_requires = >= 3.6

setup_requires =
    setuptools_scm[toml]

install_requires =

package_dir =
    =src
packages = find:

[options.packages.find]
where = src

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
dev =
    flake8
    isort
    mypy
    black
    pylint
doc =
    sphinx
    sphinx_git
    sphinx_rtd_theme<3.0.0
    sphinxcontrib-apidoc
    myst-parser
    sphinx-nefertiti
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(dev)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml
